모듈연결과 useSelector 추가

--- a/ReactStudy-TIL/16일차.md
+++ b/ReactStudy-TIL/16일차.md
@@ -184,3 +184,83 @@ export default counter;
   그리고 리듀서의 인자에 보면 `(state = intialState, action)` 이라고 되어 있다.
 
   우리는 리듀서 인자 첫번째 자리에서는 `state`를, 두번째 자리에서는 `action` 이라는 것을 꺼내서 사용할 수 있다. `state = intialState` 처럼 `state`에 `initialState`를 할당해줘야 하는 것만 기억하자.
+
+  ## 모듈 과 스토어 연결
+
+  - **(3) 카운터 모듈을 스토어에 연결하기**
+
+  우리는 지금까지 모듈파일에서 초기 상태값과 리듀서를 작성했습니다. **이제 우리가 만든 모듈을 스토어에 연결 시켜야 합니다.** 아직까진 모듈과 스토어가 각각 따로 분리되어 있는 상태이기 때문에 우리가 만든 State를 스토어에서 꺼낼 수 없습니다.
+
+  `configStore.js`로 이동해서 아래 코드를 추가해주세요.
+
+  ```jsx
+  // src/redux/modules/config/configStore.js
+
+  // 원래 있던 코드
+  import { createStore } from "redux";
+  import { combineReducers } from "redux";
+
+  // 새롭게 추가한 부분
+  import counter from "../modules/counter";
+
+  const rootReducer = combineReducers({
+    counter: counter, // <-- 새롭게 추가한 부분
+  });
+  const store = createStore(rootReducer);
+
+  export default store;
+  ```
+
+  **위와 같이 코드를 추가하면, 스토어와 모듈이 연결됩니다.** 이렇게 스토어와 모듈을 연결시키는 코드는 우리가 모듈을 추가할 때마다 똑같이 진행해주면 됩니다.
+
+  ***
+
+  ## 스토어와 모듈 연결 확인하기
+
+- **(1) useSelector = 스토어 조회**
+  우리가 생성한 모듈을 스토어에 잘 연결했는지 확인하는 방법은 **컴포넌트에서 스토어를 직접 조회**하면 됩니다. 컴포넌트에서 리덕스 스토어를 조회하고자 할때는 useSelector라는 ‘react-redux’의 훅을 사용해야 합니다.
+  useSelector의 사용법은 아래와 같습니다.
+  ```jsx
+  // 1. store에서 꺼낸 값을 할당 할 변수를 선언합니다.
+  const number =
+
+  // 2. useSelector()를 변수에 할당해줍니다.
+  const number = useSelector()
+
+  // 3. useSelector의 인자에 화살표 함수를 넣어줍니다.
+  const number = useSelector( ()=>{} )
+
+  // 4. 화살표 함수의 인자에서 값을 꺼내 return 합니다.
+  // 우리가 useSelector를 처음 사용해보는 것이니, state가 어떤 것인지 콘솔로 확인해볼까요?
+  const number = useSelector((state) => {
+  	console.log(state)
+  	return state
+  });
+  ```
+  App.js 컴포넌트로 이동해서 기존에 있던 코드를 모두 지우고, 아래 코드를 입력해주세요.
+  ```jsx
+  // src/App.js
+
+  import React from "react";
+  import { useSelector } from "react-redux"; // import 해주세요.
+
+  const App = () => {
+    const counterStore = useSelector((state) => state); // 추가해주세요.
+    console.log(counterStore); // 스토어를 조회해볼까요?
+
+    return <div></div>;
+  };
+
+  export default App;
+  ```
+  ## 컴포넌트에서 스토어를 조회할 때
+  **`react-redux`에서 제공하는 `useSelector` 라는 훅을 사용 (너무너무 중요 🔥)**
+  브라우저를 켜고, 콘솔을 보면 아래 이미지처럼 객체가 보이고, 그 안에 counter 라는 값이 있는 것을 볼 수 있습니다. 우리가 만든 counter 라는 모듈의 state가 보이는 것을 알 수 있습니다. 이렇게 화살표 함수에서 꺼낸 state라는 인자는 현재 프로젝트에 존재하는 모든 리덕스 모듈의 state 인 것 입니다.
+  이제 우리는 어떤 컴포넌트에서도 접근 할 수 있는 스토어를 가지게 되었습니다. 만약 우리가 컴포넌트에서 number라는 값을 사용하고자 한다면 아래 코드처럼 꺼내서 사용하면 됩니다.
+  ```
+  const number = useSelector(state => state.counter.number); // 0
+  ```
+
+```
+
+```
